# sfml_infinite_shooter

./: CMakeLists.txt  README.md
src/: conf.hpp  enemy.cpp  enemy.hpp  main.cpp  player.cpp  player.hpp  world.cpp  world.hpp
src/util/: logger.cpp  logger.hpp  resource_manager.cpp  resource_manager.hpp
src/weapons/: projectile.cpp  projectile.hpp  projectile_manager.cpp  projectile_manager.hpp  weapon.cpp  weapon.hpp
